discussion/kv_engine/155002/155002_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Explicitly start and stop the ExecutorPool

Add a factory method to ExecutorPool and use that to explicitly
create the executor pool during memcached initialization
phase, and explicitly shut down the pool as part of the
shutdown logic.

Change-Id: I364d0b4b08910fcff9955ce066b9d2ce409be84c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-10 05:26:02.000000000
Message: 
Uploaded patch set 16: Patch Set 15 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 06:55:47.000000000
Message: 
Patch Set 16: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9701/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9701/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9701/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8297/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36663/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/236/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10349/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11424/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11695/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11276/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19280/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-10 09:19:57.000000000
Message: 
Patch Set 16: Verified+1

Override failing clang-tidy as the failing file isn't part of the commit (none of the new include statements include that file)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-10 09:20:00.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
